--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
 
     <div class="boton_Login" id="my-signin2"></div>
    <!-- <a class="boton_Login" href="">Login</a>-->
-    <a class="boton_help" href="https://documenter.getpostman.com/view/3881784/aws1718-groups/RVu2nqg8#efa93988-0106-48d0-9fa0-18f2f89fe317">Help</a>
+    <a class="boton_help" href="https://documenter.getpostman.com/view/3881784/aws1718-groups/RVu2nqg8#efa93988-0106-48d0-9fa0-18f2f89fe317" target="_blank">Help</a>
 
      <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 </body>
