--- a/public/guestview.html
+++ b/public/guestview.html
@@ -58,7 +58,7 @@
 
 <body ng-controller="ListCtrl">
     
-<input type="button" onclick="logout()" class="logout">Logout</a>
+<input type="button" ng-click="logout()" class="logout">Logout</a>
 
     <header class="bigheader">
         <br>
