--- a/public/guestview.html
+++ b/public/guestview.html
@@ -46,6 +46,8 @@
 
         function onSuccess(googleUser) {
             console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+            console.log('Logged in as: ' + googleUser.getBasicProfile().getEmail());
+            console.log('Logged in as: ' + googleUser.getBasicProfile().getPicture());
 
             var nombre = 'Logged in as: ' + googleUser.getBasicProfile().getName();
             window.open("https://pruebapts.herokuapp.com/guestview.html");
@@ -70,9 +72,7 @@
 
 
         function signOut() {
-            /*var auth2 = gapi.auth2.getAuthInstance();*/
-            
-            var auth2 = gapi.auth2.render();
+            var auth2 = gapi.auth2.getAuthInstance();
             auth2.signOut().then(function() {
                 console.log('User signed out.');
             });
