--- a/public/guestview.html
+++ b/public/guestview.html
@@ -70,6 +70,9 @@
 
 
         function signOut() {
+
+            window.open("https://pruebapts.herokuapp.com/");
+
             var auth2 = gapi.auth2.getAuthInstance();
             auth2.signOut().then(function() {
                 console.log('User signed out.');
