--- a/public/guestview.html
+++ b/public/guestview.html
@@ -72,11 +72,12 @@
         function signOut() {
 
             window.open("https://pruebapts.herokuapp.com/");
-
-            var auth2 = gapi.auth2.getAuthInstance();
+            signOut();
+          
+          /*  var auth2 = gapi.auth2.getAuthInstance();
             auth2.signOut().then(function() {
-                console.log('User signed out.');
-            });
+                console.log('User signed out.'); 
+            });*/
         }
     </script>
 
