--- a/public/guestview.html
+++ b/public/guestview.html
@@ -71,8 +71,8 @@
 
         function signOut() {
 
-            window.open("https://pruebapts.herokuapp.com/");
-            signOut();
+            window.open('https://pruebapts.herokuapp.com/','signOut()');
+           
           
           /*  var auth2 = gapi.auth2.getAuthInstance();
             auth2.signOut().then(function() {
