--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 
     </header>
 
-    <div class="boton_Login" id="my-signin2"></div>
+    <div class="boton_Login" id="my-signin2" target="_self"></div>
   
     <a class="boton_help" href="https://documenter.getpostman.com/view/3881784/aws1718-groups/RVu2nqg8#efa93988-0106-48d0-9fa0-18f2f89fe317" target="_blank">Help</a>
     
