--- a/public/guestview.html
+++ b/public/guestview.html
@@ -89,7 +89,7 @@
 
 <body ng-controller="ListCtrl">
 
-    <a class="logout" href="public/index.html" target="_self" onclick="">Sign out</a>
+    <a class="logout" href="https://pruebapts.herokuapp.com" target="_self" onclick="">Sign out</a>
 
     <!--  <input type="button" ng-click="logout()" class="logout">Logout</input>-->
 
