--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
   
     <a class="boton_help" href="https://documenter.getpostman.com/view/3881784/aws1718-groups/RVu2nqg8#efa93988-0106-48d0-9fa0-18f2f89fe317" target="_blank">Help</a>
     
-    <a class="logout" href="#" onclick="signOut();">Sign out</a>
+    <a class="logoutindex" href="#" onclick="signOut();">Sign out</a>
 
      <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
      
