--- a/public/guestview.html
+++ b/public/guestview.html
@@ -67,6 +67,10 @@
                 'onfailure': onFailure
             });
         }
+        
+        function cerrar () {
+            window.close();
+        }
 
 
         function signOut() {
