--- a/public/guestview.html
+++ b/public/guestview.html
@@ -68,7 +68,7 @@
             });
         }
         
-        function cerrar () {
+        function cerrar() {
             window.close();
         }
 
@@ -93,7 +93,7 @@
 
 <body ng-controller="ListCtrl">
 
-    <a class="logout" href=""target="_self" onclick="">Cerrar</a>
+    <a class="logout" href=""target="_self" onclick="cerrar()">Cerrar</a>
 
     <!--  <input type="button" ng-click="logout()" class="logout">Logout</input>-->
 
